tests/baselines/reference/objectTypesIdentityWithCallSignatures3.errors.txt
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(13,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(14,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(17,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(18,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(21,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(21,25): error TS2304: Cannot find name 'b'.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(22,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(22,25): error TS2304: Cannot find name 'b'.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(25,1): error TS2463: Duplicate overload signature for foo13.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(26,1): error TS2463: Duplicate overload signature for foo13.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(29,1): error TS2463: Duplicate overload signature for foo14.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(30,1): error TS2463: Duplicate overload signature for foo14.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(33,1): error TS2463: Duplicate overload signature for foo14b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts(34,1): error TS2463: Duplicate overload signature for foo14b.


==== tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts (14 errors) ====
    // object types are identical structurally
    
    interface I {
        (x: string): string;
    }
    
    interface I2<T> {
        (x: T): T;
    }
    
    var a: { (x: string): string }
    
    function foo2(x: I);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
                            ~
!!! error TS2304: Cannot find name 'b'.
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
                            ~
!!! error TS2304: Cannot find name 'b'.
    function foo4(x: any) { }
    
    function foo13(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo13.
    function foo13(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo13.
    function foo13(x: any) { }
    
    function foo14(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: I2<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: any) { }
    
    function foo14b(x: typeof a);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14b.
    function foo14b(x: I2<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14b.
    function foo14b(x: any) { }
    
    function foo15(x: I);
    function foo15(x: I2<number>); // ok
    function foo15(x: any) { }